--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -61,8 +61,10 @@ select,input,textarea{font-family:inherit; outline:none;}
 .page0Award1{ background:url(../images/page0Award1.png) 0 0 no-repeat;}
 .page0Award2{ background:url(../images/page0Award2.png) 0 0 no-repeat;}
 .page0Award3{ background:url(../images/page0Award3.png) 0 0 no-repeat;}
+.page0Award0{ background:url(../images/noAwardBg.png) 0 0 no-repeat;}
 .indexBtn5{ left:269px; top:762px;}
 .indexBtn6{ left:194px; top:370px;}
+.indexBtn6b{ left:194px; top:400px;}
 
 .page0Img5{ background:url(../images/page0Img5.png) 0 0 no-repeat;}
 .page0Img5Act{
