--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -89,7 +89,7 @@ h2{ color:#737373; font-size:18px; line-height:100%; padding:0 0 50px 35px;}
 .shopTxt{ width:396px; height:42px; border:none; background:none; position:absolute; left:113px; top:417px; color:#000000; font-size:24px; line-height:42px; padding:0 15px;}
 
 /*list*/
-.newLine{ padding:20px; width:600px; border-bottom:1px solid #ddd;}
+.newLine{ padding:10px 20px; width:600px; border-bottom:1px solid #ddd;}
 .leftFace{ float:left; width:150px;}
 .leftFace img{ width:136px; height:102px;}
 .rightTxt{ float:right; width:445px; text-align:left;}
